[package]
name = "rhuff-compress"
version = "0.1.0"
authors = ["Loic LeBlanc <loicleblancprofessionnel@gmail.com>"]
edition = "2018"
license = "MIT"
description = "A toy compression tool and algorithm"
repository = "https://github.com/OverseeingDev/rhuffman.git"

[dependencies]
rhuffman = { path = "../rhuffman", features = ["serde"] }
bit-vec ={version = "0.6", features = ["serde"]}
structopt = "0.3"
serde = {version = "1.0.117", features = ["derive"]}
serde_bytes = "0.11"
rmp-serde = "0.15"
